@@ -20,12 +20,12 @@ setMethod("typecast", signature( object = "ANY" ),
         if (len > 2 & len <= 5){   # 3~5 category variable
           "ordered-categorical"
         } 
+        else if (len > 5 & "0" %in% values & all(values >= 0)){# more than 5 category with 0 and all positive numbers
+          "mixed" 
+        } 
         else if (len > 5 & all(values > 0)){ # more than 5 category and positive 
           "squareroot-continuous" 
           #"logscale-continuous" 
-        } 
-        else if (len > 5 & "0" %in% values & all(values >= 0)){# more than 5 category with 0 and all positive numbers
-          "mixed" 
         } 
         else { # everything else
           "continuous" 
