@@ -41,7 +41,7 @@ mi( object, info, type = NULL, n.imp = 3, n.iter = 30,
     max.minutes = 20, rand.imp.method = "bootstrap", 
     preprocess = FALSE, continue.on.convergence = FALSE,
     seed = NA, check.coef.convergence = FALSE, 
-    augment.data = FALSE, K = 0, trans = FALSE) 
+    augment.data = FALSE, K = 0) 
 }
 \arguments{
   \item{object}{A data frame containing the incomplete data. Missing data are coded as NA's or mi object.}
@@ -61,8 +61,8 @@ mi( object, info, type = NULL, n.imp = 3, n.iter = 30,
         randomly drawing from the observation or drawing from the modeled based values.  And 
         with each iteration, the probability of cooling (q) decreases by number of iterations, such that
         q = K/S.}
-  \item{trans}{transform a \code{mixed} variable into an indicator variable (0 for the 0, 1 for all the positive values, NA for NA)
-    and an log-scaled variable (log on all positive values, and NA for 0's and missing values).}
+%  \item{trans}{transform a \code{mixed} variable into an indicator variable (0 for the 0, 1 for all the positive values, NA for NA)
+%    and an log-scaled variable (log on all positive values, and NA for 0's and missing values).}
   \item{\dots}{options for plot.mi.}
   
 }
