@@ -2,9 +2,11 @@
 \alias{mi.completed}
 \alias{mi.matrix}
 \alias{mi.data.frame}
+\alias{mi.data.list}
 \alias{mi.completed,mi-method}
 \alias{mi.matrix,mi-method}
 \alias{mi.data.frame,mi-method}
+\alias{mi.data.list,mi-method}
 
 \title{ 
     Multiply Imputed Dataframe or Matrix
@@ -15,17 +17,16 @@
 }
 \usage{
 mi.completed(object, \dots)
-mi.matrix(object, \dots)
-mi.data.frame(object, \dots)
-
 \S4method{mi.completed}{mi}( object, m , outcome = c("data.frame", "matrix"))
 \S4method{mi.matrix}{mi}( object, m )
 \S4method{mi.data.frame}{mi}( object, m )
+\S4method{mi.data.list}{mi}( object, n.chains=m(object))
 }
 \arguments{
     \item{object}{ mi object containing a multiply imputed data set. 
                         The "mi" object is generated by the mi function.}
     \item{m}{ Index of the imputed data set. The default is 1.}
+    \item{n.chains}{return n.chains number of datasets; Default is m(object)). see ?\code{\link{m}}}
     \item{outcome}{ If the user wants the outcome in dataframe or matrix.}
     \item{\dots}{other arguments}
 }
@@ -55,5 +56,8 @@ mi.data.frame(object, \dots)
     imputed.matrix <- mi.completed (imp) #Imputed dataframe from the 1th Imputation (m=NULL, default=1)
     imputed.matrix <- mi.completed (imp, m=2)  #Imputed dataframe from the 2nd Imputation (m=2)
     imputed.matrix <- mi.completed (imp, m=3, outcome = "matrix")  #Imputed matrix from the 3nd Imputation (m=3)
+    imputed.data.frame <- mi.data.frame(imp, m=3) # this equals to the above one
+    imputed.datasets <- mi.data.list(imp)
 }
 \keyword{ models }
+\keyword{methods}
